// 使用proto3的语法
syntax = "proto3";

// 生成多个java类
option java_multiple_files = true;
// 生成java类所在的包
option java_package = "com.gqfly.news.server.proto.sms";
// 生成java外层类的类名
option java_outer_classname = "SmsProto";

// 声明逻辑包名
package sms;

service SmsService {
    rpc sendSms(SmsRequest) returns (stream SmsResponse);
    rpc createPhoneNumber(stream PhoneNumberRequest) returns (PhoneNumberResponse);
    rpc createAndSendSms(stream PhoneNumberRequest) returns (stream PhoneNumberResponse);
}

message SmsRequest {
    repeated string phoneNumber = 1;
    string content = 2;
}

message SmsResponse {
    string result = 1;
}

message PhoneNumberRequest {
    string phoneNumber = 1;
}

message PhoneNumberResponse {
    string result = 1;
}